<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<EditText
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/MenuOpciones"
		android:textAlignment="center"
		android:id="@+id/editText" />

	<RadioGroup
	    android:id="@+id/radioGroup1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >
	
	    <RadioButton
	        android:id="@+id/radio0"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:checked="true"
	        android:text="@string/FechaPublicacion" />
	
	    <RadioButton
	        android:id="@+id/radio1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Nota" />
	
	    <RadioButton
	        android:id="@+id/radio2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/NombreLugar" />
	</RadioGroup>
	
	<RadioGroup
	    android:id="@+id/radioGroup2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content" >
	
	    <RadioButton
	        android:id="@+id/radio3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:checked="true"
	        android:text="@string/Ascendente" />
	
	    <RadioButton
	        android:id="@+id/radio4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/Descendente" />
	</RadioGroup>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Modificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="registrarOpciones"
            android:text="@string/modificar" />

        <Button
            android:id="@+id/valoresDefecto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="valoresPorDefecto"
            android:text="@string/valoresDefecto" />
    </LinearLayout>



</LinearLayout>